cabal-version:      3.0
name:               ret
version:            0.1.1.0
synopsis:           A tool that returns to a landmark parent directory
-- description:
-- homepage:
-- bug-reports:
license:            MIT
license-file:       LICENSE
author:             Anselm Schüler
maintainer:         mail@anselmschueler.com
-- copyright:
category:           Tool
-- extra-source-files:

executable ret
  main-is:          Main.hs
  -- other-modules:    
  -- other-extensions:
  build-depends:    base,
                    process, directory, filepath, unix,
                    containers, case-insensitive
  -- hs-source-dirs:
  default-language: Haskell2010
